     * Fixed MoinMoin:MoinMoinBugs/GuiEditorFormatDropdownCrashesIE
     * Fixed MoinMoin:MoinMoinBugs/GuiEditorWordsGetJoinedTogether
     * Fixed MoinMoin:MoinMoinBugs/GuiEditorShouldWorkOnSyntaxReference

  Removed Features:
    * url_prefix setting
    * traceback_log_dir setting (we just use logging.exception)
    * editor_quickhelp setting (replaced by per-parser quickhelp)
    * backup action and associated settings

  New Features:
    * New "modernized" theme.
    * New macros "WikiConfig" and "WikiConfigHelp".
    * GUI Editor:
      * upgraded to use FCKEditor version 2.6.3 (current version)
      * user can insert and modify various types of MoinMoin links
    * Per-parser quickhelp, 'quickhelp' class variable of parser class.
    * New plugin_dirs setting to allow multiple plugin paths (additional to
      the automatically configured plugin_dir [default: data_dir/plugin]).
    * @EMAIL@ expands to a MailTo macro call with the obfuscated email address
      of the current user.

  Other Changes:
    * user_autocreate setting was removed from wiki configuration and replaced
      by a autocreate=<boolean> parameter of the auth objects that support user
      profile auto creation.


Version 1.7.current:
  Fixes:
    * Fix leakage of edit-log file handles (leaked 1 file handle / request!).
    * Wiki parser: avoid IndexError for empty #! line
    * MonthCalendar macro: fix parameter parsing / url generation
    * Xapian indexing filters (MoinMoin/filter/ or data/plugin/filter/):
      Some indexing filter scripts (e.g. for MS Word documents or PDF files)
      failed on windows because of the single-quote quoting we used (that
      works on Linux and other Posix systems). The fix introduces platform-
      dependant automatic quoting, using double-quotes on win32 and single-
      quotes on posix.
      HINT: if you use own filter plugins based on execfilter, you have to
      update them as the filename quoting (was '%s') is now done automatically